@@ -18,6 +18,8 @@
 # along with duplicity; if not, write to the Free Software Foundation,
 # Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
+# pylint: skip-file
+
 import os
 import subprocess
 import atexit
